--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
         "yiisoft/yii2-imagine": "*",
         "dmstr/yii2-adminlte-asset": "^2.3",
         "mdmsoft/yii2-admin": "~2.0",
-        "filsh/yii2-oauth2-server": "*"
+        "filsh/yii2-oauth2-server": "*",
+        "nesbot/carbon": "^1.22",
+        "yiisoft/yii2-httpclient": "^2.0",
+        "phpoffice/phpexcel": "^1.8"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
