--- a/composer.json
+++ b/composer.json
@@ -30,13 +30,13 @@
         "filsh/yii2-oauth2-server": "*",
         "nesbot/carbon": "^1.22",
         "yiisoft/yii2-httpclient": "^2.0",
-        "phpoffice/phpexcel": "^1.8"
+        "phpoffice/phpexcel": "^1.8",
+        "yiisoft/yii2-faker": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
         "yiisoft/yii2-debug": "*",
-        "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*"
+        "yiisoft/yii2-gii": "*"
     },
     "config": {
         "process-timeout": 1800
